.provarCaches/00D6C0000000xA6UAI/objects/sked__Resource_Region__c.object
<CustomObject>
    <fields>
        <fullName>sked__End__c</fullName>
        <description>Optional end date for when these regions apply</description>
        <label>End</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>sked__Region__c</fullName>
        <label>Region</label>
        <referenceTo>sked__Region__c</referenceTo>
        <relationshipLabel>Resource Regions</relationshipLabel>
        <relationshipName>Resource_Regions</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>sked__Resource__c</fullName>
        <description>Defines secondary regions for resources</description>
        <label>Resource</label>
        <referenceTo>sked__Resource__c</referenceTo>
        <relationshipLabel>Resource Regions</relationshipLabel>
        <relationshipName>Resource_Regions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>sked__Start__c</fullName>
        <description>Optional start date for when these regions apply</description>
        <label>Start</label>
        <type>DateTime</type>
    </fields>
    <label>Resource Region</label>
    <nameField>
        <label>Resource Region Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Resource Regions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>